# nestjs-durable

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts  vitest.db.config.ts  vitest.globalsetup.ts
.changeset/: adaptive-observable-workers.md  bullmq-heartbeat.md  cancel-compensate.md  cancel-remote-workflows.md  cancelling-status.md  child-await-parallel-group.md  child-running-placeholder.md  close-transport-on-shutdown.md  collapse-single-step-child.md  config.json  context-auto-feed.md  context-carrier.md  context-rehydrate.md  core-tokens-symbol-for.md  cron-timezone-schedules.md  ctx-all-and-parallel-group.md  ctx-patched.md  ctx-transaction.md  ctx-upsert-search-attributes.md  dashboard-bulk-actions.md  dashboard-child-workflow-links.md  dashboard-dlq-distinct-view.md  dashboard-dlq-view.md  dashboard-dual-cjs-esm.md  dashboard-inline-child.md  dashboard-subprocess-flicker.md  dashboard-ui-actions.md  dead-letter-handler.md  delete-run.md  dispatch-start.md  dlq-maxrecoveryattempts.md  durable-canonical-tokens.md  durable-child-edge-and-click.md  durable-child-name-span-times.md  durable-decision-dispatch-mark-race.md  durable-decision-multi-instance.md  durable-deeplink-nested-select.md  durable-diagnostics.md  durable-entities.md  durable-list-runs-workflow-filter-tests.md  (+100 more)
.github/workflows/: check-skills.yml  ci.yml  docs.yml  release-python.yml  release-snapshot.yml  release.yml
_artifacts/: domain_map.yaml  skill_spec.md  skill_tree.yaml
clients/python/: README.md  pyproject.toml
clients/python/durable_worker/: __init__.py  adaptive.py  cancellation.py  db_runner.py  redis_runner.py  routing.py  sqs_runner.py  worker.py  workflow.py
clients/python/examples/: run_worker.py
clients/python/tests/: test_cancellation.py  test_db_runner.py  test_namespace.py  test_redis_url.py  test_routing.py  test_run_all.py  test_run_workers.py  test_sqs_runner.py  test_start_run.py  test_sub_process.py  test_tenant_worker.py  test_worker.py  test_worker_health.py  test_workflow.py  test_workflow_gather.py  test_workflow_run_heartbeat.py  test_workflow_step_observability.py  test_workflow_worker_offload.py
docs/: namespaces.md  workers-when-to-use.md
docs/plans/: 2026-06-11-nestjs-durable-design.md  2026-06-13-control-plane-and-transport-routing.md  2026-06-13-durability-audit-roadmap.md  2026-06-15-extensible-subprocess-lifecycle.md  2026-06-15-improvement-report.md  2026-06-15-polyglot-workflows-protocol.md  2026-06-15-subprocess-lifecycle-flip-consumer-impl.md  2026-06-15-subprocess-lifecycle-lib-impl.md
docs/superpowers/plans/: 2026-06-19-durable-diagnostics.md  2026-06-22-durable-gather-python.md  2026-06-26-durable-namespace.md  2026-06-30-durable-tenants-hosted-control-plane.md  2026-07-01-durable-p4-operator-drive-mode.md
docs/superpowers/specs/: 2026-06-19-durable-diagnostics-design.md  2026-06-22-durable-parallel-gather-design.md  2026-06-22-flip-processing-gather-adoption.md  2026-06-22-node-thin-worker-design.md  2026-06-22-track-a-remote-settle-diagnosis.md  2026-06-23-track-a-liveness-rearm-spec.md  2026-06-26-durable-namespace-design.md  2026-06-30-durable-tenants-hosted-control-plane-design.md
examples/basic/: package.json  tsconfig.json
examples/basic/src/: app.module.ts  checkout.e2e.spec.ts  checkout.steps.ts  (+2 more)
scripts/: py-e2e-dispatch.mjs  py-e2e.sh  tsup-decorator.mjs
website/: next.config.mjs  package.json
website/app/: layout.tsx
website/lib/: shared.ts
(+42 files in other folders)
