[project]
name = "durable-worker"
version = "0.1.0"
description = "Python worker SDK for nestjs-durable — run durable workflow steps in Python."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Davide Carvalho", email = "davi@goflip.ai" }]
keywords = ["workflow", "durable", "nestjs", "worker"]

[project.optional-dependencies]
redis = ["redis>=5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["durable_worker"]
