[project]
name = "durable-worker"
version = "0.8.1"
description = "Python worker SDK for nestjs-durable — run durable workflow steps in Python."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Davide Carvalho", email = "davi@goflip.ai" }]
keywords = ["workflow", "durable", "nestjs", "worker"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/DavideCarvalho/nestjs-durable"
Repository = "https://github.com/DavideCarvalho/nestjs-durable"
Issues = "https://github.com/DavideCarvalho/nestjs-durable/issues"

[project.optional-dependencies]
redis = ["bullmq>=2.0"]
sqs = ["boto3>=1.26"]
postgres = ["asyncpg>=0.27"]
mysql = ["aiomysql>=0.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["durable_worker"]
